fixed spacing bw lines on login

--- a/app/static/styles/login.css
+++ b/app/static/styles/login.css
@@ -447,6 +447,7 @@ footer {
 
 .google-auth-button svg {
     flex-shrink: 0;
+    margin-bottom: 2px;
 }
 
 /* Error and success messages */
